# EPSMIM

./: .gitignore  CMakeLists.txt  GnuplotRealTime.cpp  GnuplotRealTime.h  main.cpp  plot1.gp  plot2.gp  readme.md  wave_solver.cpp  wave_solver.h
performance/: collect_metrics.py  lab3.py  plot.py
src/: main.cpp
src/affinity/: affinity.cpp  affinity.h
src/realtime_plot/: GnuplotRealTime.cpp  GnuplotRealTime.h
src/v1/: main.cpp  wave_solver.h
src/v1.0/: wave_solver.cpp
src/v1.1/: main.cpp  wave_solver.cpp  wave_solver.h
src/v1.2/: main.cpp  wave_solver.cpp  wave_solver.h
src/v1.3/: main.cpp  wave_solver.cpp  wave_solver.h
src/v1.4/: wave_solver.cpp  wave_solver.h
src/v1.5/: main.cpp  wave_solver.cpp  wave_solver.h
src/v1/v1.0/: main.cpp
src/v1/v1.1/: wave_solver.cpp  wave_solver.h
src/v1/v1.2/: wave_solver.cpp
src/v1/v1.3/: main.cpp
src/v1/v1.4/: main.cpp  wave_solver.cpp
src/v1/v1.5/: wave_solver.cpp
src/v2.1/: wave_solver.cpp
src/v2.3/: main.cpp  wave_solver.cpp  wave_solver.h
src/v2.4/: main.cpp  wave_solver.cpp  wave_solver.h
src/v2/v2.0/: wave_solver.cpp
src/v2/v2.2/: main.cpp  wave_solver.cpp
src/v2/v2.3/: main.cpp  wave_solver.h
src/v2/v2.4/: align_alloc.h  main.cpp  wave_solver.cpp  wave_solver.h
src/v3/v3.0/: main.cpp  wave_solver.cpp  wave_solver.h
